--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 	<head></head>
 	<body>
-<<<<<<< HEAD
 		<h1> Mercadona </h1>
-=======
 		<h1>Bruce Wayne no es Batman</h1>
->>>>>>> 03c0a8db4cf2232a8eb0877036e13bd5702c5a1c
+		<input type="button" value="Verdadero">
+		<input type="button" value="Falso">
 	</body>
 </html>
