--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<body>
 		<h1> Mercadona </h1>
 		<h1>Bruce Wayne no es Batman</h1>
-		<input type="button" value="Verdadero">
+		<input type="button" value="Fals">
 	</body>
 </html>
