--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 	<head></head>
 	<body>
 		<h1> Mercadona </h1>
-		<h1>Bruce Wayne no es Batman</h1>
+		<h1>Bruce Wayne no es Batman, o sí</h1>
 	</body>
 </html>
